[proxmox] Add monitoring channels and improve null-safety
Signed-off-by: GiovanniBattista